fixed write() in FileManager, so that there is no empty line at the end